wiLink 0.9.9b (UNRELEASED)
 * Chat rooms:
   - Display room subject and make it possible to change it.
   - When sending messages to a chat room, do not set "from".
   - Display image and profile links for room members.
 * Miscellaneous:
    - Fix parsing of the menu refresh interval.

wiLink 0.9.9a (2010-09-16)
 * Do not join bookmarked rooms until we receive our nickname.

wiLink 0.9.9 (2010-09-16)
 * Account management:
   - Add an explicit "Cancel" button to credentials prompt.
   - Test the credentials entered by the using in the account creation prompt.
   - Add links to "wiLink FAQ" from credentials and account prompts.
   - Make chat accounts accessible from the system tray.
 * Chat conversations:
   - Do not allow rich text in chat input box as it is discarded afterwards.
   - Do not display error messages in chat history.
   - Show conversation history up to 2 weeks.
 * File sharing:
   - Merge shares browse / search views.
   - Perform search on shares as the user types.
   - Support search requests with a base location.
 * Sofware updates:
   - Download updates in the background and prompt user after download.
   - Do not re-download a software update if it already has a valid checksum.
 * Miscellaneous:
   - Fix "open at login" option when multiple accounts are used.
   - Implement "open at login" option for freedesktop.org compliant desktops.
   - Make it possible to show / hide offline contacts.
   - Add a "Help" menu with "About wiLink" and a link to "wiLink FAQ".
   - Fix autoscrolling of debugging console.
   - Add a browser for XMPP service discovery information.

wiLink 0.9.8 (2010-07-27)
 * Add a new layout for the chat history.
 * Make it possible to search in chat history.
 * Make it possible to search in debugging console.
 * Improve insertion of line breaks in the chat input.
 * Use silent installer for upgrades on Windows.
 * Fix sorting of roster entries with identical names.