@@ -1,6 +1,6 @@
 #ifndef CONFIG_H
 #define CONFIG_H
 
-#define WILINK_VERSION "0.9.9a"
+#define WILINK_VERSION "0.9.9a901"
 
 #endif
