@@ -3,8 +3,11 @@ wiLink 0.9.9b (UNRELEASED)
    - Display room subject and make it possible to change it.
    - When sending messages to a chat room, do not set "from".
    - Display image and profile links for room members.
+ * Shares:
+   - Make it possible to select additional folders to share.
  * Miscellaneous:
     - Fix parsing of the menu refresh interval.
+    - Add caching on vCards to reduce network traffic at connect.
 
 wiLink 0.9.9a (2010-09-16)
  * Do not join bookmarked rooms until we receive our nickname.
